Use of OPAL_HOME to define opal's volume